applications/robot-gitlab/access/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/custom-http-errors: 400,500
    nginx.ingress.kubernetes.io/proxy-body-size: 2m
  name: ingress
  namespace: robot-gitlab
spec:
  tls:
    - hosts:
        - robot-gitlab.osinfra.cn
      secretName: secret-tls-access
  rules:
    - host: robot-gitlab.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: service-access
              servicePort: 8888
            path: /gitlab-hook
